--- a/source/propaganda/upstate/chapter7.html.md.erb
+++ b/source/propaganda/upstate/chapter7.html.md.erb
@@ -13,13 +13,13 @@ layout: layout_chapter
 
 Everyone is glaring at me.  I try not to make any trouble with the exhausted and hung over contractors trundling through the empty school on an early Sunday morning, but my comrades intend otherwise.  I get pushed and nudged around; one guy slams me against a locker and keeps moving.  Middle school all over again.  I ignore it.  
 
-Inside the gym wait Franshesco and another Dragon I don’t know, looks Southeast Asian.  He’s pretty short for a Dragon - barely five foot four.  As contractors shuffle in they order us in lines. After we straighten out, Franshesco and the other Dragon turn to each other and bow.  Franshesco steps forward.
+Inside the gym wait Franshesco and another Dragon I don’t know, looks Southeast Asian, judging by the darker skin tone.  He’s pretty short for a Dragon - barely five foot four.  As contractors shuffle in they order us in lines. After we straighten out, Franshesco and the other Dragon turn to each other and bow.  Franshesco steps forward.
 
 “I see a lot of bloodshot stink-eye, so let’s cut to the chase: Foster and the rest of you are here because I was around to save his life last night.  If he had the proper training, this wouldn’t have happened, and if you were in his place without a Dragon watching your back, you’d be dead.  So instead of antagonizing Foster, perhaps you should be grateful that if you ever end up in trouble without someone to bail your ass out, you can come back alive to thank him.”
 
 I do my best to keep from looking around and appearing triumphant.  Last thing I need is to have to prove myself to a room full of people who are pissed at me.
 
-“This is Adi, our chief instructor.  He has generously volunteered to teach you rookies how to fight.  You’re all citizens of Aurora now, and we’ll hold you to that same standard.  When you get your ass kicked in sparring we’ll put it on the Bionet and laugh at you.”
+“This is Adi, our chief instructor.  He has generously volunteered to teach you rookies how to fight.  You’re all full citizens of Aurora now, and we’ll hold you to that same standard.  When you get your ass kicked in sparring we’ll put it on the Bionet and laugh at you.”
 
 The two of them turn to each other, bow, and Franshesco walks out.
 
@@ -35,11 +35,7 @@ Adi bends his arm back, knees him in the gut, and throws him to the wall with an
 
 “You may resume your position.  Is anyone else taking the expedited exam?  No?  Let’s get started.”
 
-The entire class is choreographed.  Every motion has a very particular set of moves.  I even have to turn around just to scratch an itch on my nose; pushups if I forget.  
-
-As much as I dread sparring, the exercises are punishing enough.  I do pushups in ways I would never consider.  My whole body shakes by the end and we haven’t even started the lesson.  
-
-After an hour of warmups we finally practice basic blocks over and over.  Then other blocks, then finally punches.  Even a little primer on kicks.  We are half an hour over time when I hear it.
+The entire class is choreographed.  Every motion has a very particular set of moves.  I even have to turn around just to scratch an itch on my nose; pushups if I forget.  The warmups exercise every major muscle group.  I do pushups in ways I would never consider.  My whole body shakes by halfway through and we haven’t even started the lesson.  After an hour of warmups we finally practice basic blocks over and over.  Then other blocks, then finally punches.  Even a little primer on kicks.  We are half an hour over time when I hear it.
 
 “Pair up.”
 
@@ -49,7 +45,7 @@ I go down hard and my head slams against the floor.  In a blur of sound and sigh
 
 If I learn anything, it’s that.  There are a few more matches before he lets us go.  Whenever I get knocked down I roll into it and get right back up, even if it means another kick to the ribs.  Each fight breaks me down until I can barely raise my fists.  Even then, I never give up.  I think they respect me a little after that; nobody pushes me around afterwards.  I lose every fight and leave feeling nothing like a loser.
 
-Even with the protein bars Adi gave out at the end of the lesson, each step makes me feel like life itself is being drained from me.  Earlier I’d planned on going straight to the hotel, but even that short walk is hell on my legs.  I look around for a coffee shop or something but one thing catches my eye and doesn’t let go: an extravagant temple I’d never seen because I’m always here at night.  It’s made of brightly painted wood and has the look of a Japanese shrine.  Probably has somewhere to sit.
+Even with the protein bars Adi gives out at the end of the lesson, each step makes me feel like life itself is being drained from me.  Earlier I’d planned on going straight to the hotel, but even that short walk is hell on my legs.  I look around for a coffee shop or something but one thing catches my eye and doesn’t let go: an extravagant temple I’d never seen because I’m always here at night.  It’s made of brightly painted wood and has the look of a Japanese shrine.  Probably has somewhere to sit.
 
 I peek inside and see the rooms are almost devoid of furniture.  Not even a chair, damn.  Just at that moment, Shiro spots me and walks over.  He’s wearing an elaborate dark robe and moves with a grace and harmony that can’t be matched in a rigid Multiform.  
 
@@ -115,7 +111,7 @@ I slide my thumb down my fingers and flick my pinky.
 
 As soon as I do, the darkness is pierced by a circle, bisected with a vertical line.
 
-{All that we know can be broken down to two states: is and is not.  True and false.  Zero and one.  Open your eyes}
+{All that we know can be broken down to two states: is, and is not.  True and false.  Zero and one.  Open your eyes}
 
 Shiro is enveloped by a swirl of light.  The glow comes from everyone and everywhere: the floors, the walls, and anything with a switch.
 
@@ -123,13 +119,13 @@ Shiro is enveloped by a swirl of light.  The glow comes from everyone and everyw
 
 He lets me drift my gaze around the room, taking it all in.  When I look back, he continues.
 
-{We inherit work.  Kodokami - software spirits - can work indefinitely.  By creating Kodokami, we live on forever.  But Kodoshinto can never justify harm.  That is our Firmware of Faith.  Show reverence for your ancestors, and your code will be shared among us}
+{We inherit work from our ancestors.  Kodokami - software spirits - can work indefinitely.  By creating Kodokami, we live on forever.  But Kodoshinto can never justify harm.  That is our Firmware of Faith.  Show reverence for your ancestors, and your code will be shared among all of humanity}
 
 {Do I bow?}
 
-{If you choose. You must simply say, ‘Thank you, ancestors,’ and approve the confirmation.  People of different faiths have their own way of expression.  Hindus are fond of automating their offerings to their gods. Certain Muslims prefer to code towards Mecca}
+{If you choose. You must simply say, ‘Thank you, ancestors,’ and approve the confirmation.  People of different faiths have their own way of expression.  Hindus are fond of automating their offerings to their gods; certain Muslims prefer to code towards Mecca}
 
-I follow him through several intricate chambers, all reminiscent of styles and customs of every religion possible - Christians with pews, Muslims with prayer rugs, even a fair number of Hindus, creating Kodokami among their gods.  
+I follow him through several intricate chambers, all reminiscent of styles and customs of every religion possible - Christians with pews, Muslims with prayer rugs, a fair number of Hindus, all creating Kodokami among their gods.  
 
 {So would that make an artificial intelligence God?}
 
@@ -159,13 +155,13 @@ I code myself into a trance.  I make a series of automations that I forget half 
 
 Some things I can never get used to, like being called ‘sir’ by people twice my age, or seeing enough weapons in the open to massacre a city.  But the insidious utopia grinds away at your doubts until you stop questioning them altogether.
 
-The Dragons make it easy to settle into a routine.  I’m not given hours, I just work until I feel done for the day.  I make twice with them than I earn on my own, even after their fees.  And it’s fun: they have troves of information from all sorts of jobs that they just leave lying around, like manure they wouldn’t think to turn into fertilizer.  Compared to before, I barely have to try: if I need cash to sweeten the pot for a good deal, the Dragons are there.  If cornering the info market on the right target means that people have to disappear, the Dragons can stage any number of accidents.  If I know a source is holding out I can always call on the Dragons for "enhanced interrogation," or as they call it: "torture."  The Dragons make sure my hands are never dirty.  Less leverage for an adversary if I were ever kidnapped.  But it still takes a toll.  I'm reminded of how drone operators suffer post-traumatic stress even though they're never less than a thousand miles away from anything that could hurt them.  For some reason I start watching videos of strikes from the drone's point of view to unwind while I experiment with a cocktail of drugs to chemically concuss my brain into thinking this is normal.  I can't.  No matter how much torture I put myself under to normalize the depravity, my conscience gnaws back at me.  Even as I watch videos of thermally enhanced silhouettes fleeing Hellfire missles and shaking in their boots before being shredded by Vulcan cannons forcing myself to abandon empathy for the murdered, I still feel fear.  I hide it, at least in the office.  I don't let anyone onto what I do after hours.  As long as I’m not giving away sensitive information the Dragons could care less about what I’m doing, and they are happy to take most of the profits.  
+The Dragons make it easy to settle into a routine.  I’m not given hours, I just work until I feel done for the day.  I make twice with them than I earn on my own, even after their fees.  And it’s fun: they have troves of information from all sorts of jobs that they just leave lying around, like manure they wouldn’t think to turn into fertilizer.  Compared to before, I barely have to try: if I need cash to sweeten the pot for a good deal, the Dragons are there.  If cornering the info market on the right target means that people have to disappear, the Dragons can stage any number of accidents.  If I know a source is holding out I can always call on the Dragons for enhanced interrogation, or as they call it, "torture."  The Dragons make sure my hands are never dirty.  Less leverage for an adversary if I were ever kidnapped.  But it still takes a toll.  I'm reminded of how drone operators suffer post-traumatic stress even though they're never less than a thousand miles away from anything that could hurt them.  For some reason I start watching videos of strikes from the drone's point of view to unwind while I experiment with a cocktail of drugs to chemically concuss my brain into thinking this is normal.  I can't.  No matter how much torture I put myself under to normalize the depravity, my conscience gnaws back at me.  Even as I watch videos of thermally enhanced silhouettes fleeing Hellfire missles and shaking in their boots before being shredded by Vulcan cannons, forcing myself to abandon empathy for the murdered, I still feel fear.  I hide it, at least in the office.  I don't let anyone onto what I do after hours.  As long as I’m not giving away sensitive information the Dragons could care less about what I’m doing, and they are happy to take most of the profits.  
 
 If I were a Dragon I would be swimming in cash from these deals, but something stops me from committing to Meizhan.  I still value my friends outside Aurora that don’t like the Dragons, like Jeremy and Natalia.  Nobody will ever know me like those two.  Nobody else will remember jokes from growing up that we have.  I feel like if I try to get the collar I’ll lose that connection, and they’re the only ones I have left.
 
 There's a grinding sense you get when you start working full time.  At one point I look back and remember the last time I had a proper job I was bagging groceries at Wegmans as a teenager.  It sucked then having half the time for a social life but I figured that's just what life would be like: work hard today so you can work less tomorrow.  The Dragons turn that on its head.  Work is its own reward.  Everything else drowns out into a work-sleep routine that becomes harder and harder to crawl out of the more embedded I get.  After the fourth late night in a row spent grabbing drinks with other contractors, I realize that I haven't spent time with my friends in over a month.  Nobody's ever "in the neighborhood."  They're doing what everyone else is doing: sticking with a routine that doesn't bring them out of town that often.  When I was just starting up with the Dragons I thought I could keep my own schedule, and the lie is that I can, but there's always more to do: a sucker's hideout location to sell, an informant to bribe with special favors like box seats at a football match, a spyware tool masquerading as a cyberweapon that I embed with a competitor through third parties.  Every action I take opens a dozen doors and I can't just stand in an empty hallway with a handful of keys.  
 
-Over time, it becomes harder to isolate Aurora from the rest of my life.  Every time I go home I get more and more paranoid about assassins or booby-traps creeping around the corner.  I sign a lease for an apartment in Novaurora.  Pretty soon I only go home on Friday nights, and return the next day for Meizhan.  
+Over time, it becomes harder to isolate the Dragons from the rest of my life.  Every time I go home I get more and more paranoid about assassins or booby-traps creeping around the corner.  I sign a lease for an apartment in Novaurora.  Pretty soon I only go home on Friday nights, and return the next day for Meizhan.  
 
 The Dragons have an insidious way of getting into your head.  The secret is to make everything amazing without appearing judgmental.  Their culture has such gravity I can’t help being sucked into their orbit.  Talking to Aurorans means talking about Meizhan at some point, so I have to learn who the fighters were, their specialties, their political stances, anything to hold a conversation.  Anyone who doesn’t show enough interest or initiative to keep up eyed at as a culture misfit: hard to build a rapport with people who think you’ll be nudged out by the end of the year.  Then they talk about technique, and I realize how easily any of them could beat me to a pulp after years of training.  I take extra martial arts and work out harder than I ever have before.  I start winning sparring matches and even the contractors who hated my guts before start to respect me.  I feel the confidence of an army as I build my body into a weapon, and I look damn good in an Auroran Multiform!  I like wearing it outside of Aurora.  Nobody messes with me. 
 
