--- a/source/propaganda/upstate/chapter8.html.md.erb
+++ b/source/propaganda/upstate/chapter8.html.md.erb
@@ -299,7 +299,7 @@ The border mercs’ APC bumps into the back of my car and I start to lose contro
 
 “One!  Wade, floor it!”
 
-I hear a crack like a whip come out of nowhere and immediately the chopper drops out of the air like a rock.  The crash shakes my pursues enough to give me a little breathing room, but I’m not out of the woods yet.
+I hear a crack like a whip come out of nowhere and immediately the chopper drops out of the air like a rock.  The crash shakes my pursuers enough to give me a little breathing room, but I’m not out of the woods yet.
 
 “Wade, you’re coming up on Mecklenburg too fast, you won’t make the curve.”
 
@@ -495,4 +495,4 @@ We shoot our fists into the air.  We nod, we turn, we walk away.
 
 I don’t talk to anyone on my way home.  I almost try calling Natalia, but I can't bring myself to it.  I just smoke, and drink, and smoke, and smoke.  I want to get so high I can’t even think about what I did for more than five seconds, and I am.  I take the bubbler into bed with me.  I’m covered in greens and ashes.  Last thing I remember before passing out is the bubbler slipping from my hands.  It shatters on the floor.  I think about cleaning it up, and my body opts for the alternative.
 
-## Next: Chapter 8 - Loyalty to the End (11/2/15)
+<a href="/propaganda/upstate/chapter9" class="button">Next: Chapter 9 - Loyalty to the End</a> 
