--- a/source/propaganda/upstate/index.html.erb
+++ b/source/propaganda/upstate/index.html.erb
@@ -35,7 +35,10 @@ title: Upstate
 					<a href="/propaganda/upstate/chapter8">Chapter 8 - Loyalty to the Mission</a>
 				</li>
 				<li>
-					Chapter 9 - Loyalty to the End (11/2/15)
+					<a href="/propaganda/upstate/chapter9">Chapter 9 - Loyalty to the End</a>
+				</li>
+				<li>
+					Chapter 10 - They Say What, I Say How (11/3/15)
 				</li>
 			</ul>
 		</div>
