--- a/source/propaganda/upstate/chapter9.html.md.erb
+++ b/source/propaganda/upstate/chapter9.html.md.erb
@@ -333,4 +333,4 @@ I think I’m happy.  I have everything I could ever want or need.
 
 Life sucks.  It's never easy.  But it can work in your favor.  I’ll ride the wave.
 
-## Next: Chapter 10 - They Say What, I Say How (11/9/15)
+<a href="/propaganda/upstate/chapter10" class="button">Next: Chapter 10 - They Say What, I Say How </a>
