--- a/source/propaganda/upstate/index.html.erb
+++ b/source/propaganda/upstate/index.html.erb
@@ -38,7 +38,10 @@ title: Upstate
 					<a href="/propaganda/upstate/chapter9">Chapter 9 - Loyalty to the End</a>
 				</li>
 				<li>
-					Chapter 10 - They Say What, I Say How (11/3/15)
+					<a href="/propaganda/upstate/chapter10">Chapter 10 - They Say What, I Say How</a>
+				</li>
+				<li>
+					Chapter 11 - Harmony with the Environment (12/9/15)
 				</li>
 			</ul>
 		</div>
